objects/tinderbox__TinderBox_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of fields (with object names), that will be included in the proposals created by the custom button</description>
    <fields>
        <fullName>tinderbox__Client_Account__c</fullName>
        <label>Client Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Tinderbox Fields</label>
</CustomObject>